overflow correct

--- a/src/assets/css/chatFrame.css
+++ b/src/assets/css/chatFrame.css
@@ -16,5 +16,6 @@
 	height: 90%;
 	width: 100%;
 	margin: auto 0;
-	overflow: scroll;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
